# pygopher-interfaces

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  CHANGELOG.rst  LICENSE  README.md  README.rst  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: ci.yml  docs.yml  lint.yml  pipeline.yml  publish.yml  python-publish.yml  test.yml
docs/source/: api.rst  conf.py  index.rst
src/pygopher/: interfaces.py
src/pygopher/interfaces/: __init__.py  interfaces.py
tests/: test_interface.py  test_load.py
