[tool.poetry]
name = "pygopher-interfaces"
version = "0.1.0a0"
description = "Go-style interfaces for Python"
authors = ["Mark Rogaski <mrogaski@pobox.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/mrogaski/pygopher-interfaces"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Typing :: Typed"
]
packages = [
    { include = "pygopher", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
importlib-metadata = { version = "^3.10.0" }

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pre-commit = "^2.12.0"
black = "^20.8b1"
isort = "^5.8.0"
pylint = "^2.7.4"
mypy = "^0.812"
flake8 = "^3.9.0"
flake8-cognitive-complexity = "^0.1.0"
pytest-cov = "^2.11.1"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-pythonpath = "^0.7.3"
Sphinx = "^3.5.3"
sphinx-rtd-theme = "^0.5.2"

[tool.coverage.run]
branch = true
omit = []

[tool.coverage.report]
show_missing = true
ignore_errors = true
exclude_lines = ["pragma: no cover"]

[tool.black]
line-length = 120
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
known_first_party = "go_interfaces"
line_length = 120
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
ensure_newline_before_comments = true
force_grid_wrap = 0
[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

